# snackpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: PythonLibTest.cmake
include/internal/: blas1.h
include/snackpack/: blas1_real.h  blas2_real.h  error.h  logger.h  matrix.h  parsed.h  parser.py  snackpack.h  sort.h  sp_rep_macros.h  vector.h
include/snackpack/internal/: blas1_real_internal.h
interface/python/: CMakeLists.txt
interface/python/snackpack/: __init__.py  blas.py  libloader.py  util.py
src/: CMakeLists.txt  blas1.c  blas1_real.c  blas1_real_internal.c  blas2_real.c  error.c  logger.c  sort.c
test/: CMakeLists.txt
test/ctest/include/: ctest.h
test/ctest/src/: CMakeLists.txt  ctest.c  sblat1.c  sptest.c
test/pythontest/: CMakeLists.txt  test_blas1_real.py  test_blas2_real.py  util.py
